--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ data/
 *wind-energy-299318-3149f6f4b059
 #Large notebook
 *turbine_map.ipynb
+*new_turbine_map.ipynb
 
 # Distribution / packaging
 .Python
